# nekoneko-technology-management-dashboard

./: .gitignore  README.md  structure.yaml
src/backend/: Cargo.toml
src/backend/src/: main.rs
src/frontend/: next.config.js  package-lock.json  package.json
src/frontend/.next/: trace
src/frontend/.next/cache/webpack/client-development/: index.pack.gz.old
src/frontend/.next/cache/webpack/server-development/: index.pack.gz.old
src/frontend/.next/server/: _error.js
src/frontend/.next/server/pages/: _app.js  _error.js  index.js
src/frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
src/frontend/.next/static/chunks/: _error.js  webpack.js
src/frontend/.next/static/chunks/pages/: _app.js  index.js
src/frontend/.next/static/webpack/: webpack.144bafaa608e1377.hot-update.js  webpack.64a12e4454aeecfe.hot-update.js  webpack.df7d3f87868ee800.hot-update.js
src/frontend/.next/static/webpack/pages/: _app.144bafaa608e1377.hot-update.js
src/frontend/src/pages/: index.tsx
src/frontend/src/stores/: projectStore.ts
